# coter

./: .clang-format  .gitignore  .gitmodules  .test.sh  CLAUDE.md  CMakeLists.txt  README.md  Taskfile.yml
bytes/: CMakeLists.txt
bytes/src/: builder.c  bytes.c  pool.c  rbuf.c  seg.c
bytes/test/: CMakeLists.txt  builder_test.cpp  bytes_concurrent_test.cpp  bytes_test.cpp  pool_test.cpp  rbuf_test.cpp  seg_hpp_test.cpp  seg_test.cpp  segment_test.cpp
catch/: CMakeLists.txt
container/: CMakeLists.txt
container/src/: hash.c  heap.c  list.c  packet.c  pqueue.c  queue.c  rbuf.c  stack.c  vector.c
container/test/: CMakeLists.txt  array_test.cpp  hash_test.c  hash_test.cpp  heap_test.c  heap_test.cpp  list_test.cpp  packet_test.c  packet_test.cpp  pqueue_test.cpp  queue_test.c  queue_test.cpp  rbuf_test.c  rbuf_test.cpp  stack_test.c  stack_test.cpp  vector_test.cpp
core/: CMakeLists.txt
core/src/: platform.c  time.c
core/test/: CMakeLists.txt  platform_test.cpp  time_test.cpp
crypto/: CMakeLists.txt
crypto/src/: md5.c  sha1.c
crypto/test/: CMakeLists.txt  md5_test.c  md5_test.cpp  sha1_test.c  sha1_test.cpp
encoding/: CMakeLists.txt
encoding/src/: base64.c  binary.c  hex.c  pack.c
encoding/test/: CMakeLists.txt  base64_test.cpp  bcd_test.cpp  binary_test.cpp  hex_test.cpp  pack_test.cpp
event/: CMakeLists.txt
event/src/: hub.c  msgqueue.c
event/test/: CMakeLists.txt  hub_test.c  hub_test.cpp  msgqueue_test.c  msgqueue_test.cpp
log/test/: CMakeLists.txt  log_callback_test.c  log_callback_test.cpp  log_hex_test.c  log_hex_test.cpp  log_print_test.c  log_print_test.cpp  log_write_test.c  log_write_test.cpp
math/test/: CMakeLists.txt  bit_cast_test.cpp  bit_test.cpp  rand_test.cpp
opt/: CMakeLists.txt
opt/example/: CMakeLists.txt  basic.c  subcommands.c  usage.c
opt/src/: opt.c
opt/test/: CMakeLists.txt  basic_test.cpp  help_test.cpp  stress_test.cpp
src/: CMakeLists.txt  ct_app.c  ct_app.h
src/algo/: base64.c  ct_base64.c  ct_base64.h  ct_hashalgo.c  ct_hashalgo.h  ct_md5.c  ct_md5.h  ct_sha1.c  ct_sha1.h  hashalgo.c  index.h  md5.c  sha1.c
src/base/: any.c  atomic.c  config.h.in  ct_any.c  ct_any.h  ct_assert.h  ct_atomic.c  ct_atomic.h  ct_context.h  ct_datetime.c  ct_datetime.h  ct_debug.h  ct_debug.h.in  ct_define.h  ct_endian.h  ct_platform.c  ct_platform.h  ct_random.c  ct_random.h  ct_time.c  ct_time.h  ct_types.h  ct_utils.c  ct_utils.h  ct_version.h  ct_version.h.in  datetime.c  index.h  random.c  time.c  utils.c
src/bytes/: builder.c  bytes.c  pool.c  seg.c  span.c
src/common/: ct_any.c  ct_any.h  ct_random.c  ct_random.h  ct_time.c  ct_time.h
src/container/: bytes.c  ct_bytes.c  ct_bytes.h  ct_hash.c  ct_hash.h  ct_heap.c  ct_heap.h  ct_list.c  ct_list.h  ct_pack.c  ct_packet.c  ct_packet.h  ct_queue.c  ct_queue.h  ct_rbuf.c  ct_rbuf.h  ct_stack.c  ct_stack.h  ct_vector.c  ct_vector.h  hash.c  heap.c  list.c  pack.c  packet.c  queue.c  rbuf.c  stack.c  vector.c
src/convert/: ct_bytearray.c  ct_bytearray.h  ct_str.c  ct_str.h
src/crypto/: sha1.c
src/encoding/: base64.c  binary.c  pack.c
src/event/: hub.c  msgqueue.c
src/hash/: hash.c
src/log/: log_printer.c  log_storage.c  logger.c
src/mech/: bytepool.c  cron.c  ct_bytepool.c  ct_bytepool.h  ct_cron.c  ct_cron.h  ct_event.c  ct_event.h  ct_evmsg.c  ct_evmsg.h  ct_jobpool.c  ct_jobpool.h  ct_log.c  ct_log.h  ct_mempool.c  ct_mempool.h  ct_msgqueue.c  ct_msgqueue.h  ct_spinlock.c  ct_spinlock.h  ct_thpool.c  ct_thpool.h  ct_threadcache.c  ct_threadcache.h  ct_timer.c  ct_timer.h  ct_waitgroup.c  event.c  evhub.c  evmsg.c  jobpool.c  msgqueue.c  thpool.c  threadcache.c  timer.c  waitgroup.c
src/mem/: alloc.c
src/prefix/: ct_assert.h
src/runtime/: cache.c  jobpool.c  thpool.c
src/strings/: strings.c
src/sys/: ct_cond.c  ct_cond.h  ct_mutex.c  ct_mutex.h  ct_once.c  ct_once.h  ct_rwlock.c  ct_rwlock.h  ct_spinlock.c  ct_spinlock.h  ct_syscmd.c  ct_syscmd.h  ct_sysinfo.c  ct_sysinfo.h  ct_thread.c  ct_thread.h
src/thread/: cache.c  jobpool.c  thpool.c
src/time/: cron.c  datetime.c  time.c  timer.c
src/types/: any.c
strings/: CMakeLists.txt
strings/src/: strings.c
strings/test/: CMakeLists.txt  strings_test.c  strings_test.cpp
sync/: CMakeLists.txt
sync/src/: cond.c  event.c  sem.c  waitgroup.c
sync/test/: CMakeLists.txt  atomic_stress_test.c  atomic_stress_test.cpp  atomic_test.c  atomic_test.cpp  event_test.cpp  mutex_cond_test.cpp  rwlock_test.cpp  sem_test.cpp  waitgroup_test.cpp
test/: CMakeLists.txt
test/algo/: base64_test.c  hashalgo_test.c  md5_test.c  sha1_test.c  test_base64.c  test_hashalgo.c  test_md5.c
test/base/: atomic_test.c  platform_test.c  random_test.c  str_test.c  test_atomic.c  test_datetime.c  test_platform.c  test_random.c  test_str.c  test_time.c  time_test.c  utils_test.c
test/bytes/: CMakeLists.txt  builder_test.c  builder_test.cpp  bytes_concurrent_test.c  bytes_concurrent_test.cpp  bytes_test.c  bytes_test.cpp  pool_test.c  pool_test.cpp  seg_hpp_test.cpp  seg_test.c  seg_test.cpp  segment_test.cpp  span_test.c
test/common/: test_random.c  test_str.c
test/container/: CMakeLists.txt  array_test.cpp  bytes_concurrent_test.c  bytes_test.c  hash_test.c  heap_test.c  list_test.c  pack_test.c  packet_test.c  queue_test.c  rbuf_test.c  stack_test.c  test_bytes.c  test_bytes_concurrent.c  test_hash.c  test_heap.c  test_list.c  test_queue.c  test_rbuf.c  test_stack.c  test_vector.c  vector_define_test.c  vector_test.c
test/core/: CMakeLists.txt  platform_test.c
test/crypto/: CMakeLists.txt  md5_test.c  sha1_test.c
test/encoding/: CMakeLists.txt  base64_test.c  bcd_test.cpp  binary_test.c  hex_test.c  pack_test.c
test/event/: CMakeLists.txt  msgqueue_test.c
test/hash/: CMakeLists.txt  hashalgo_test.c
test/log/: CMakeLists.txt  log_callback_test.c  log_hex_test.c  log_print_test.c  log_write_test.c
test/math/: CMakeLists.txt  bcd_test.cpp  bit_cast_test.c  bit_cast_test.cpp  bit_test.cpp  rand_test.c
testing/: CMakeLists.txt  catch.hpp
thread/: CMakeLists.txt
types/: CMakeLists.txt
(+378 files in other folders)
