add_library(Catch2 INTERFACE)
target_include_directories(Catch2 INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

add_library(Catch2Main INTERFACE)
target_include_directories(Catch2Main INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(Catch2Main INTERFACE CATCH_CONFIG_MAIN)

add_subdirectory(bytes)
add_subdirectory(container)
add_subdirectory(core)
add_subdirectory(crypto)
add_subdirectory(encoding)
add_subdirectory(event)
add_subdirectory(hash)
add_subdirectory(log)
add_subdirectory(math)
add_subdirectory(strings)
add_subdirectory(sync)
add_subdirectory(thread)
add_subdirectory(time)
add_subdirectory(types)
