set(MAIN_CPP ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)

add_library(Catch2 INTERFACE)
target_include_directories(Catch2 INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(Catch2 INTERFACE coter_compile_dependency)

add_subdirectory(bytes)
add_subdirectory(container)
add_subdirectory(core)
add_subdirectory(crypto)
add_subdirectory(encoding)
add_subdirectory(event)
add_subdirectory(hash)
add_subdirectory(log)
add_subdirectory(math)
add_subdirectory(strings)
add_subdirectory(sync)
add_subdirectory(thread)
add_subdirectory(time)
add_subdirectory(types)
